# BioRazer-Toolkit

./: .gitignore  pyproject.toml
biorazer_toolkit/apis/: README.md
biorazer_toolkit/apis/nvidia/: colabfold_msa_search.py
biorazer_toolkit/apps/: README.md  __init__.py  basic.py  logging.py
biorazer_toolkit/apps/fpocket/: __init__.py  execution.py
biorazer_toolkit/apps/master/: execution.py  util.py
biorazer_toolkit/apps/pulchra/: execution.py
biorazer_toolkit/apps/reduce/: execution.py
biorazer_toolkit/apps/rosetta/: __init__.py  blueprint.py  blueprint_archive.py  execution.py  resfile.py  scorefile.py
biorazer_toolkit/apps/unidesign/: __init__.py  analysis.py  config.py  execution.py  resfile.py
biorazer_toolkit/bridges/: README.md
biorazer_toolkit/bridges/bindcraft/: analysis.py  bindcraft_helper.py
biorazer_toolkit/helpers/: README.md
biorazer_toolkit/helpers/mdanalysis/scripts/: center_protein_in_box.py  export_files.py  slice_trajectory.py
biorazer_toolkit/helpers/pymol/: __init__.py  io.py  report.py
biorazer_toolkit/helpers/pyrosetta/: __init__.py  fold_tree.py  utils.py
biorazer_toolkit/utils/: __init__.py  structure_file.py
notebooks/: MMseqs2_ColabFold.ipynb
notebooks/DNA Chisel/: Optimize_Codon.ipynb
notebooks/MMseqs2/: MMseqs2_ColabFold_LocalSubmit.ipynb
protocols/: Optimize_Codon.ipynb  Optimize_DNA.ipynb  protein_evaluation_0.1.0.py
protocols/protein_evaluation/: protein_evaluation_0.1.0.py
protocols/protein_interface_evaluation/: protein_interface_evaluation_shen_2018_science.py
(+7 files in other folders)
