[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "biorazer-toolkit"
version = "0.2.0"
description = "This package brings about many helper functions to make using other packages easier."
authors = [
    "Maxim Wang <wangfanlin2022@sibcb.ac.cn>"
]
readme = "README.md"
packages = [
    {include = "biorazer_toolkit"}
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
numpy = "^2"
treelib = "^1.8.0"
biopython = "^1.85"
pandas = "^2.3.1"
tqdm = "^4.67.1"
fastapi = "^0.116.1"

